<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:backgroundTint="?attr/colorOnPrimary"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <FrameLayout
            android:background="?attr/colorSurface"
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/iv_guitar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="matrix"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic"
                android:contentDescription="@string/a_guitar_photo" />
        </FrameLayout>


        <TextView
            android:id="@+id/tv_card_guitar_name"
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/guitar_name"
            app:layout_constraintEnd_toStartOf="@+id/tv_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <TextView
            android:id="@+id/tv_maker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/guitar_maker"
            app:layout_constraintBottom_toTopOf="@+id/btn_read_more"
            app:layout_constraintEnd_toEndOf="@+id/tv_card_guitar_name"
            app:layout_constraintStart_toStartOf="@+id/tv_card_guitar_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_guitar_name" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/price"
            app:layout_constraintBottom_toTopOf="@+id/btn_read_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <Button
            android:id="@+id/btn_read_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_dbl_arrow_right"
            android:drawableTint="#FFC107"
            android:gravity="center|end"
            android:text="@string/read_more"
            android:backgroundTint="#FFFF794E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_maker" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>