<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuitarDetailActivity"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:navigationIcon="?android:attr/homeAsUpIndicator"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <FrameLayout
            android:background="?attr/colorSurface"
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:padding="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_toolbar"
            >

            <ImageView
                android:id="@+id/iv_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/a_guitar_detail"
                android:rotation="-90"
                android:scaleType="fitCenter"
                android:src="@drawable/original" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/share_this"
            android:src="@drawable/ic_share"
            app:tint="#2196F3"
            android:backgroundTint="#41787878"
            app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
            app:layout_constraintEnd_toEndOf="@+id/frameLayout2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/frameLayout2"
            app:layout_constraintTop_toTopOf="@+id/frameLayout2"
            app:layout_constraintVertical_bias="0.0"
            />


        <TextView
            android:id="@+id/tv_detail_name"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/guitar_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_detail_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

        <TextView
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:id="@+id/tv_detail_price"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:gravity="bottom|end"
            android:text="@string/price"
            app:layout_constraintBottom_toTopOf="@+id/tv_detail_maker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />
        <TextView
            android:id="@+id/tv_detail_maker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="start"
            android:text="@string/guitar_maker"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:textColor="#5A5959"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/nil_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_maker" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
